Tue Feb 12 10:40:37 2002                        Michael Jennings (mej)

Still not fleshed out, but at least the warnings are gone. :-)
----------------------------------------------------------------------
Sun Feb 17 12:10:59 2002                        Michael Jennings (mej)

Hopefully now this will make more sense.  The string class is now
fleshed out...along with a complete set of unit tests. :)
----------------------------------------------------------------------
Mon Feb 18 21:54:25 2002                        Michael Jennings (mej)

Mmmmm...reusability. :-)
----------------------------------------------------------------------
Sun Mar  3 01:44:51 2002                        Michael Jennings (mej)

Added precision to the profiling stuff, and threw in the beginnings of
support for interface classes.
----------------------------------------------------------------------
Thu Apr  4 20:45:30 2002                        Michael Jennings (mej)

Lots of updates.  This should compile, but if it doesn't, don't blame
me.  (Well, blame me, just don't whine at me.) :-)

Also a bit of a design doc here...hopefully it will clarify some
things.
----------------------------------------------------------------------
Thu Apr  4 21:13:01 2002                        Michael Jennings (mej)

Re-indenting code.
----------------------------------------------------------------------
Thu Apr  4 22:24:36 2002                        Michael Jennings (mej)

Oops...
----------------------------------------------------------------------
Thu Apr 11 18:03:46 2002                        Michael Jennings (mej)

The list interface is complete (for now) as is its first
implementation:  the linked_list class.  Unit tests are also in.
----------------------------------------------------------------------
Thu Apr 11 18:15:11 2002                        Michael Jennings (mej)

Fix "make distcheck"
----------------------------------------------------------------------